# iSIM

./: .gitignore  CMakeLists.txt  README.md  clust_isim.py  div_isim.py  iSIM_clustering.ipynb  iSIM_example.csv  iSIM_example.ipynb  iSIM_simulated_fps.ipynb  isim_clustering.py  isim_comp.py  isim_div.py  isim_real.py  isim_sampling.py  isim_utils.py  requirements.txt  setup.py
examples/: CMakeLists.txt  README.md  iSIM_clustering.ipynb  iSIM_example.ipynb  iSIM_sampling.ipynb  iSIM_simulated_fps.ipynb  isim_clustering.cpp  isim_comp.cpp  isim_sampling.cpp
iSIM/: clustering.cpp  clustering.h  clustering.py  comp.cpp  comp.h  comp.py  div.cpp  div.h  div.py  hc_utils.cpp  hc_utils.h  isim.h  meta.yaml  real.cpp  real.h  real.py  sampling.cpp  sampling.h  sampling.py  utils.py
test/: CMakeLists.txt  README.md  test_clustering.cpp  test_comp.cpp  test_div.cpp  test_main.cpp  test_real.cpp  test_sampling.cpp  test_utils.cpp  test_utils.h
test/python_results/: compsim_chembl214_1000_rows_JT_real.csv  compsim_chembl214_1000_rows_RR_real.csv  compsim_chembl214_1000_rows_SM.csv  diversity_JT_60percent_chembl214.csv  diversity_RR_20percent_chembl214.csv  extremes_sampling_JT_20percent_chembl214.csv  extremes_sampling_RR_50percent_chembl214.csv  extremes_sampling_SM_35percent_chembl214.csv  hc_clustering_50_fps_JT_chembl214.csv  hc_clustering_50_fps_RR_chembl214.csv  hc_clustering_50_fps_SM_chembl214.csv  medoid_sampling_JT_35percent_chembl214.csv  medoid_sampling_RR_20percent_chembl214.csv  medoid_sampling_SM_50percent_chembl214.csv  outlier_sampling_JT_50percent_chembl214.csv  outlier_sampling_RR_35percent_chembl214.csv  outlier_sampling_SM_20percent_chembl214.csv  quota_sampling_RR_40percent_15bins_chembl214.csv  reverse_diversity_JT_60percent_chembl214.csv  reverse_diversity_RR_20percent_chembl214.csv  stratified_sampling_RR_40percent_15strata_chembl214.csv
tests/: test.py
